# Ornitorrincos

./: Anfibio.cpp  Anfibio.h  CMakeLists.txt  Mamifero.cpp  Mamifero.h  Ornitorrinco.cpp  Ornitorrinco.h  Oviparo.cpp  Oviparo.h  Venenoso.cpp  Venenoso.h  main.cpp
