cmake_minimum_required(VERSION 3.26)
project(Parcial2_POO3)

set(CMAKE_CXX_STANDARD 17)

add_executable(Parcial2_POO3 main.cpp
        Mamifero.cpp
        Mamifero.h
        Oviparo.cpp
        Oviparo.h
        Anfibio.cpp
        Anfibio.h
        Venenoso.cpp
        Venenoso.h
        Ornitorrinco.cpp
        Ornitorrinco.h)
